# omdrcctrl

./: CMakeLists.txt  README.md  kdeconnect_cmds.conf  requirements.txt
rc.d/: arkictrl.in  omdrcctrl.in
src/: app.py  arkictrl.sh.in  commands.conf  commands.conf.in  drc-status.sh  omdrcctrl.sh.in
src/templates/: details.html  filter_response.html  index.html
systemd/: arkictrl-user.service.in  arkictrl.service.in  omdrcctrl-user.service.in  omdrcctrl.service.in
